프로필 만들기 API 연결 (#177)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.group.detail.GroupDetailActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".presentation.ui.group.add.GroupAddActivity"
             android:exported="false" />
@@ -30,11 +30,18 @@
         <activity
             android:name=".presentation.ui.MainActivity"
             android:exported="false" />
-        <activity android:name=".presentation.ui.chatlist.chat.ChatActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".presentation.ui.chatlist.chat.ChatActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.ui.register.RegisterActivity"
-            android:exported="false">
+            android:exported="true"
+            android:theme="@style/Theme.Friendogly.Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.canhub.cropper.CropImageActivity"
