refactor: 상수 yml로 분리

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -1,5 +1,9 @@
 aws:
   s3:
+    bucket-name: techcourse-project-2024
     mock:
-      enabled: true
       port: 8100
+      endpoint: http://localhost
+    server:
+      endpoint: https://d3obq7hxojfffa.cloudfront.net/
+      key-prefix: friendogly/
