--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,22 +20,29 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.group.detail.GroupDetailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.group.add.GroupAddActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.profilesetting.ProfileSettingActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.MainActivity"
-            android:exported="false" />
-        <activity android:name=".presentation.ui.chatlist.chat.ChatActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.ui.chatlist.chat.ChatActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.register.RegisterActivity"
             android:exported="true"
-            android:theme="@style/Theme.Friendogly.Splash">
+            android:theme="@style/Theme.Friendogly.Splash"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,10 +51,12 @@
         </activity>
         <activity
             android:name="com.canhub.cropper.CropImageActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.ImageCropper" />
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
