--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -66,8 +66,8 @@ dependencies {
 
     swaggerUI 'org.webjars:swagger-ui:4.11.1'
 
-    implementation 'com.amazonaws:aws-java-sdk-s3'
-    implementation 'io.findify:s3mock_2.13:0.2.6'
+    implementation "software.amazon.awssdk:s3:2.26.21"
+
 
 }
 
