--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,3 +1,5 @@
 spring.sql.init.data-locations=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=local
+spring.jpa.defer-datasource-initialization=true
