--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -59,6 +59,9 @@ paging = "3.3.0"
 
 splashscreen = "1.0.1"
 
+# animation
+lottie = "5.0.2"
+
 [libraries]
 # test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -110,11 +113,14 @@ firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase-bom" }
 google-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "google-play-services-auth" }
 
-# Network
+# network
 retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 okhttp-core = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit2-kotlinx-serialization-converter" }
+
+# animation
+lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
 
 [bundles]
 android = ["androidx-constraintlayout", "androidx-activity", "androidx-lifecycle", "androidx-activity-ktx", "androidx-fragment-ktx", "androidx-appcompat", "androidx-core-ktx", "material", "image-cropper", "glide", "flextbox", "paging-runtime-ktx", "splashscreen"]
@@ -126,6 +132,7 @@ naver = ["naver-maps"]
 location = ["location"]
 datastore = ["datastore", "datastore-core"]
 test = ["junit", "junit-jupiter", "assertj", "kotest", "mockk"]
+animation = ["lottie"]
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
