feat: GroupModify 데이터 바인딩과 뷰 모델 연결

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.group.modify.GroupModifyActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ui.dogdetail.DogDetailActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
