--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.group.modify.GroupModifyActivity"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".presentation.ui.dogdetail.DogDetailActivity"
@@ -36,6 +38,7 @@
         <activity
             android:name=".presentation.ui.group.add.GroupAddActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.profilesetting.ProfileSettingActivity"
