feat: 다른 사용자 프로필 페이지

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,10 +19,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.ui.group.modify.GroupModifyActivity"
-            android:windowSoftInputMode="adjustPan"
+            android:name=".presentation.ui.otherprofile.OtherProfileActivity"
+            android:exported="false"
             android:screenOrientation="portrait"
-            android:exported="false" />
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".presentation.ui.group.modify.GroupModifyActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".presentation.ui.dogdetail.DogDetailActivity"
             android:exported="false"
@@ -38,8 +43,8 @@
         <activity
             android:name=".presentation.ui.group.add.GroupAddActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".presentation.ui.profilesetting.ProfileSettingActivity"
             android:exported="false"
