--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.mylocation.SettingMyLocationActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ui.otherprofile.OtherProfileActivity"
             android:exported="false"
             android:screenOrientation="portrait"
