--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".presentation.ui.dogdetail.DogDetailActivity"
+            android:name=".presentation.ui.petdetail.PetDetailActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
