chore: 펫 등록 페이지 dog 네이밍 pet으로 변경

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".presentation.ui.registerdog.RegisterDogActivity"
+            android:name=".presentation.ui.registerpet.RegisterPetActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
