--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -2,6 +2,7 @@ spring:
   config:
     activate:
       on-profile: "local"
+    import: "classpath:secrets.yml"
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:database
@@ -24,5 +25,3 @@ logging.level.org:
   hibernate:
     SQL: debug
     orm.jdbc.bind: trace
-
-
