--- a/backend/src/test/resources/application-local.yml
+++ b/backend/src/test/resources/application-local.yml
@@ -1,1 +1,7 @@
 # for FakeStorageManager
+
+# for oauth
+kakao:
+  grant_type: 안녕하세요! 반갑개에 어서오세요~
+  client_id: 이 글을 읽으신 분에게 행운이 가득하길 빌어요~
+  redirect_uri: 행복한 하루 되세요!
