--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -3,8 +3,8 @@ name: backend-ci
 on:
   pull_request:
     branches: [ "develop" ]
-    paths:
-     - 'backend/**'
+    # paths:
+    #  - 'backend/**'
 
 defaults:
   run:
@@ -13,7 +13,7 @@ defaults:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       checks: write
 
@@ -37,10 +37,10 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: 8.1.1
+      # - name: Setup Gradle
+      #   uses: gradle/actions/setup-gradle@v3
+      #   with:
+      #     gradle-version: 8.1.1
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -48,16 +48,16 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
-      - name: 테스트 결과를 PR에 코멘트로 등록합니다
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        if: always()
-        with:
-          files: './backend/build/test-results/test/TEST-*.xml'
+      # - name: 테스트 결과를 PR에 코멘트로 등록합니다
+      #   uses: EnricoMi/publish-unit-test-result-action@v1
+      #   if: always()
+      #   with:
+      #     files: './backend/build/test-results/test/TEST-*.xml'
 
 
-      - name: 실패 테스트결과의 원인을 Report 합니다
-        uses: mikepenz/action-junit-report@v3
-        if: always()
-        with:
-          report_paths: './backend/build/test-results/test/TEST-*.xml'
-          token: ${{ github.token }}
+      # - name: 실패 테스트결과의 원인을 Report 합니다
+      #   uses: mikepenz/action-junit-report@v3
+      #   if: always()
+      #   with:
+      #     report_paths: './backend/build/test-results/test/TEST-*.xml'
+      #     token: ${{ github.token }}
