--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.mylocation.SettingMyLocationActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ui.otherprofile.OtherProfileActivity"
             android:exported="false"
             android:screenOrientation="portrait"
@@ -70,7 +73,6 @@
             android:theme="@style/Theme.Friendogly.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
