--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".presentation.ui.registerdog.RegisterDogActivity"
+            android:name=".presentation.ui.registerpet.RegisterPetActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
