chore: 테스트용 push

--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
-#      - name: 테스트 결과를 PR에 코멘트로 등록합니다
+#      - name: 테스트 결과를 PR에 코멘트로 등록합니다.
 #        uses: EnricoMi/publish-unit-test-result-action@v1
 #        if: always()
 #        with:
