fix: 라이브러리 변경

--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -56,8 +56,17 @@ jobs:
 #        with:
 #          files: './backend/build/test-results/test/TEST-*.xml'
 
-      - name: 테스트 결과를 PR에 코멘트로 등록합니다
-        uses: EnricoMi/publish-unit-test-result-action/linux@v2
+#      - name: 테스트 결과를 PR에 코멘트로 등록합니다
+#        uses: EnricoMi/publish-unit-test-result-action/linux@v2
+#        if: always()
+#        with:
+#          files: |
+#            ./backend/build/test-results/**/*.xml
+#            ./backend/build/test-results/**/*.trx
+#            ./backend/build/test-results/**/*.json
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
           files: |
