--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -3,10 +3,8 @@ name: backend-ci
 on:
   pull_request:
     branches: [ "develop" ]
-#    paths:
-#      - 'backend/**'
-# 테스트가 끝나면 삭제합니다.
-# another test
+    paths:
+      - 'backend/**'
 
 defaults:
   run:
@@ -50,22 +48,7 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
-#      - name: 테스트 결과를 PR에 코멘트로 등록합니다.
-#        uses: EnricoMi/publish-unit-test-result-action@v1
-#        if: always()
-#        with:
-#          files: './backend/build/test-results/test/TEST-*.xml'
-
-#      - name: 테스트 결과를 PR에 코멘트로 등록합니다
-#        uses: EnricoMi/publish-unit-test-result-action/linux@v2
-#        if: always()
-#        with:
-#          files: |
-#            ./backend/build/test-results/**/*.xml
-#            ./backend/build/test-results/**/*.trx
-#            ./backend/build/test-results/**/*.json
-
-      - name: Publish Test Results
+      - name: 테스트 결과를 PR에 코멘트로 등록합니다
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
