chore: cd 스크립트 수정
Co-authored-by: J-I-H-O <jeongjiho0731@gmail.com>
Co-authored-by: jimi567 <repday0609@gmail.com>

--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -2,9 +2,7 @@ name: deploy
 
 on:
   push:
-    branches: ['develop']
-    paths: 
-      - 'backend/**'
+    branches: ['feature/oauth-kakao']
      
 jobs:
   build:
@@ -31,7 +29,7 @@ jobs:
         
       - name: Build project using Gradle
         working-directory: ./backend
-        run: ./gradlew build
+        run: ./gradlew build -Djwt.secret-key=${{ secrets.JWT_SECRET_KEY }} -Djwt.access-expiration-time=${{ secrets.JWT_ACCESS_EXPIRATION_TIME }}  -Djwt.refresh-expiration-time=${{ secrets.JWT_REFRESH_EXPIRATION_TIME}}
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
