chore: cd시 jwt 환경변수에 바인딩하도록 수정
Co-authored-by: J-I-H-O <jeongjiho0731@gmail.com>
Co-authored-by: jimi567 <repday0609@gmail.com>

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -4,3 +4,7 @@ aws:
     server:
       endpoint: https://d3obq7hxojfffa.cloudfront.net/
       key-prefix: friendogly/
+jwt:
+  secret-key: ${JWT_SECRET_KEY}
+  access-expiration-time: ${JWT_ACCESS_EXPIRATION_TIME}
+  refresh-expiration-time: ${JWT_REFRESH_EXPIRATION_TIME}
