--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -2,8 +2,8 @@ name: deploy
 
 on:
   push:
-    branches: ['feature/oauth-kakao']
-     
+    branches: ["feature/oauth-kakao"]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,8 +15,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'corretto'
+          java-version: "17"
+          distribution: "corretto"
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
@@ -26,24 +26,29 @@ jobs:
       - name: Grant execute permission for gradlew
         working-directory: ./backend
         run: chmod +x gradlew
-        
+
       - name: Build project using Gradle
+        env:
+          JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+          JWT_ACCESS_EXPIRATION_TIME: ${{ secrets.JWT_ACCESS_EXPIRATION_TIME }}
+          JWT_REFRESH_EXPIRATION_TIME: ${{ secrets.JWT_REFRESH_EXPIRATION_TIME}}
+
         working-directory: ./backend
-        run: ./gradlew build -Djwt.secret-key=${{ secrets.JWT_SECRET_KEY }} -Djwt.access-expiration-time=${{ secrets.JWT_ACCESS_EXPIRATION_TIME }}  -Djwt.refresh-expiration-time=${{ secrets.JWT_REFRESH_EXPIRATION_TIME}}
+        run: ./gradlew build
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
         with:
           name: friendogly-be-develop-jar
           path: ./backend/build/libs/friendogly-0.0.1-SNAPSHOT.jar
-          
+
   deploy:
     needs: build
     runs-on: self-hosted
     steps:
       - name: Change permission
         run: |
-          sudo chown -R ubuntu:ubuntu /home/ubuntu/actions-runner/_work/2024-friendogly 
+          sudo chown -R ubuntu:ubuntu /home/ubuntu/actions-runner/_work/2024-friendogly
 
       - name: Download build artifact
         uses: actions/download-artifact@v3
