--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -28,11 +28,6 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build project using Gradle
-        env:
-          JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
-          JWT_ACCESS_EXPIRATION_TIME: ${{ secrets.JWT_ACCESS_EXPIRATION_TIME }}
-          JWT_REFRESH_EXPIRATION_TIME: ${{ secrets.JWT_REFRESH_EXPIRATION_TIME}}
-
         working-directory: ./backend
         run: ./gradlew build
 
@@ -76,5 +71,5 @@ jobs:
           cd backend/build/libs
           echo "File creation time(KR-09:00):"
           ls -l --time=ctime friendogly-0.0.1-SNAPSHOT.jar
-          sudo nohup java -jar friendogly-0.0.1-SNAPSHOT.jar --spring.profiles.active=dev &
+          sudo nohup java -jar friendogly-0.0.1-SNAPSHOT.jar --spring.profiles.active=dev --jwt.secret-key=${{ secrets.JWT_SECRET_KEY }} --jwt.access-expiration-time=${{ secrets.JWT_ACCESS_EXPIRATION_TIME }} --jwt.refresh-expiration-time=${{ secrets.JWT_REFRESH_EXPIRATION_TIME }} &
           echo "start backend server"
