--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -1,8 +1,10 @@
 name: deploy
 
 on:
-  push:
-    branches: ["feature/oauth-kakao"]
+  pull_request:
+    branches: ["develop"]
+    paths:
+      - "backend/**"
 
 jobs:
   build:
