--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -2,10 +2,10 @@ name: deploy
 
 on:
   push:
-    branches: ['develop']
-    paths: 
-      - 'backend/**'
-     
+    branches: ["develop"]
+    paths:
+      - "backend/**"
+
 jobs:
   build:
     runs-on: self-hosted
@@ -17,8 +17,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'corretto'
+          java-version: "17"
+          distribution: "corretto"
 
       # - name: Setup Gradle
       #   uses: gradle/actions/setup-gradle@v3
@@ -28,7 +28,7 @@ jobs:
       - name: Grant execute permission for gradlew
         working-directory: ./backend
         run: chmod +x gradlew
-        
+
       - name: Build project using Gradle
         working-directory: ./backend
         run: ./gradlew build
@@ -38,14 +38,14 @@ jobs:
         with:
           name: friendogly-be-develop-jar
           path: ./backend/build/libs/friendogly-0.0.1-SNAPSHOT.jar
-          
+
   deploy:
     needs: build
     runs-on: self-hosted
     steps:
       - name: Change permission
         run: |
-          sudo chown -R ubuntu:ubuntu /home/ubuntu/actions-runner/_work/2024-friendogly 
+          sudo chown -R ubuntu:ubuntu /home/ubuntu/actions-runner/_work/2024-friendogly
 
       - name: Download build artifact
         uses: actions/download-artifact@v3
@@ -73,5 +73,5 @@ jobs:
           cd backend/build/libs
           echo "File creation time(KR-09:00):"
           ls -l --time=ctime friendogly-0.0.1-SNAPSHOT.jar
-          sudo nohup java -jar friendogly-0.0.1-SNAPSHOT.jar --spring.profiles.active=dev &
+          sudo nohup java -jar friendogly-0.0.1-SNAPSHOT.jar --spring.profiles.active=dev --jwt.secret-key=${{ secrets.JWT_SECRET_KEY }} --jwt.access-expiration-time=${{ secrets.JWT_ACCESS_EXPIRATION_TIME }} --jwt.refresh-expiration-time=${{ secrets.JWT_REFRESH_EXPIRATION_TIME }} &
           echo "start backend server"
