--- a/backend/src/test/resources/application-local.yml
+++ b/backend/src/test/resources/application-local.yml
@@ -1,1 +1,7 @@
 # for FakeStorageManager
+
+# for jwt
+jwt:
+  secret-key: 행복하세요~행복하세요~행복하세요~행복하세요~행복하세요~행복하세요~행복하세요~행복하세요~
+  access-expiration-time: 5_184_000_000 # 24시간 (ms)
+  refresh-expiration-time: 36_288_000_000 # 7일 (ms)
