--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -31,7 +31,7 @@ jobs:
           FIREBASE_FRIENDOGLY_PRIVATE_KEY: ${{ secrets.FIREBASE_FRIENDOGLY_PRIVATE_KEY }}
         run: |
           ls
-          touch ../backend/src/main/resources/firebase-friendogly-private-key.json
+          touch ./backend/src/main/resources/firebase-friendogly-private-key.json
           echo FIREBASE_FRIENDOGLY_PRIVATE_KEY >> ./backend/src/main/resources/firebase-friendogly-private-key.json
           # cat ../backend/src/main/resources/firebase-friendogly-private-key.json
 
