chore: firebase json경로 yml에 생성

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.profiles.active=local
 spring.jpa.defer-datasource-initialization=true
+
+file.firebase.path= firebase-friendogly-private-key.json
