--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -33,7 +33,7 @@ jobs:
           ls
           touch ./backend/src/main/resources/firebase-friendogly-private-key.json
           echo ${{ secrets.FIREBASE_FRIENDOGLY_PRIVATE_KEY }} >> ./backend/src/main/resources/firebase-friendogly-private-key.json
-          cat ./backend/src/main/resources/firebase-friendogly-private-key.json
+          # cat ./backend/src/main/resources/firebase-friendogly-private-key.json
 
       - name: Grant execute permission for gradlew
         working-directory: ./backend
