--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'io.jsonwebtoken:jjwt:0.12.6'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
+    compileOnly "org.springframework.boot:spring-boot-starter-actuator"
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
