[AN] 웹소켓 연결 (#336)

--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -63,6 +63,9 @@ splashscreen = "1.0.1"
 # animation
 lottie = "5.0.2"
 
+# stomp
+krossbow = "7.0.0"
+
 [libraries]
 # test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -125,6 +128,12 @@ retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit
 # animation
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie" }
 
+# stomp
+krossbow-stomp-core = { group = "org.hildan.krossbow", name = "krossbow-stomp-core", version.ref = "krossbow" }
+krossbow-websocket-oktthp = { group = "org.hildan.krossbow", name = "krossbow-websocket-okhttp", version.ref = "krossbow" }
+krossbow-kxserialization = {group = "org.hildan.krossbow", name= "krossbow-stomp-kxserialization", version.ref = "krossbow"}
+krossbow-kxserialization-json = {group = "org.hildan.krossbow", name = "krossbow-stomp-kxserialization-json", version.ref = "krossbow"}
+
 [bundles]
 android = ["androidx-constraintlayout", "androidx-activity", "androidx-lifecycle", "androidx-activity-ktx", "androidx-fragment-ktx", "androidx-appcompat", "androidx-core-ktx", "material", "image-cropper", "glide", "flextbox", "paging-runtime-ktx", "splashscreen"]
 kotlin = ["lifecycle-runtime-ktx", "lifecycle-extensions", "coroutines-core", "kotlinx-serialization", "kotlinx-datetime"]
@@ -136,6 +145,7 @@ location = ["location"]
 datastore = ["datastore", "datastore-core"]
 test = ["junit", "junit-jupiter", "assertj", "kotest", "mockk"]
 animation = ["lottie"]
+stomp = ["krossbow-stomp-core", "krossbow-websocket-oktthp", "krossbow-kxserialization","krossbow-kxserialization-json"]
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
