--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.12.6'
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
-    compileOnly "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
