--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.club.my.MyClubActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ui.mylocation.SettingMyLocationActivity"
             android:exported="false" />
         <activity
@@ -61,8 +64,7 @@
         <activity
             android:name=".presentation.ui.MainActivity"
             android:exported="false"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".presentation.ui.chatlist.chat.ChatActivity"
             android:exported="false"
@@ -74,6 +76,7 @@
             android:theme="@style/Theme.Friendogly.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
