--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -16,8 +16,10 @@ management:
     prometheus:
       enabled: true
 
-
   endpoints:
     web:
       exposure:
         include: "*"
+
+  server:
+    port: 8081
