feat: 주변 발자국에 알림 기능 구현

--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -25,3 +25,8 @@ logging.level.org:
   hibernate:
     SQL: debug
     orm.jdbc.bind: trace
+
+
+file:
+  firebase:
+    path: firebase-friendogly-private-key.json
