--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     swaggerUI 'org.webjars:swagger-ui:4.11.1'
 
     implementation "software.amazon.awssdk:s3:2.26.21"
+
+    // fcm
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
 }
 
 tasks.withType(Test) {
