--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -18,16 +18,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Friendogly"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
-        <activity
-            android:name=".presentation.ui.woof.PetImageActivity"
-            android:exported="false" />
+        tools:targetApi="31">
         <activity
             android:name=".presentation.ui.club.my.MyClubActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.mylocation.SettingMyLocationActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.otherprofile.OtherProfileActivity"
             android:exported="false"
@@ -47,7 +46,8 @@
             android:name=".presentation.ui.petdetail.PetDetailActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-        <activity android:name=".presentation.ui.woof.PetImageActivity"
+        <activity
+            android:name=".presentation.ui.woof.PetImageActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
@@ -70,8 +70,7 @@
         <activity
             android:name=".presentation.ui.MainActivity"
             android:exported="false"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.chatlist.chat.ChatActivity"
             android:exported="false"
@@ -80,7 +79,7 @@
             android:name=".presentation.ui.register.RegisterActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Friendogly.Splash" >
+            android:theme="@style/Theme.Friendogly.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -94,7 +93,7 @@
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
