--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -45,6 +45,13 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: create-json
+        uses: jsdaniell/create-json@1.1.2
+        with:
+          name: "firebase-friendogly-private-key.json"
+          json: ${{ secrets.FIREBASE_FRIENDOGLY_PRIVATE_KEY }}
+          dir: './backend/src/main/resources/'
+
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
