--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,10 +21,12 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.club.my.MyClubActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.mylocation.SettingMyLocationActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.otherprofile.OtherProfileActivity"
             android:exported="false"
@@ -44,7 +46,8 @@
             android:name=".presentation.ui.petdetail.PetDetailActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-        <activity android:name=".presentation.ui.woof.PetImageActivity"
+        <activity
+            android:name=".presentation.ui.woof.PetImageActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
@@ -67,8 +70,7 @@
         <activity
             android:name=".presentation.ui.MainActivity"
             android:exported="false"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.ui.chatlist.chat.ChatActivity"
             android:exported="false"
