[BE] feat: 주변 발자국 알림 기능 구현 (#378)
Co-authored-by: 이충렬(트레) <37261785+takoyakimchi@users.noreply.github.com>

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -37,6 +37,9 @@ out/
 
 ### secrets ###
 src/main/resources/secrets.yml
+/src/main/resources/firebase-friendogly-private-key.json
 
 ### logs ###
 logs/
+
+
