chore: keystore 디렉토리 생성되게 구현

--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -71,8 +71,8 @@ jobs:
         run: |
           echo "KEYSTORE_PROPERTIES" > keystore.properties
 
-      - name: Create file
-        run: cat /home/runner/work/2024-friendogly/2024-friendogly/android/app/keystore/friendogly.jks | base64
+      - name: Create keystore directory
+        run: mkdir -p /home/runner/work/2024-friendogly/2024-friendogly/android/app/keystore
 
       - name: Putting data
         env:
